[WSP-61] Upgrading to 16.5.1