@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.onehippo.cms7</groupId>
         <artifactId>hippo-cms7-enterprise-release</artifactId>
-        <version>16.5.0</version>
+        <version>16.5.1</version>
         <!-- Please have a look at the property section while upgrading. -->
     </parent>
 
@@ -129,22 +129,17 @@
         <hippo.environment></hippo.environment>
         <!--<tomcatDistributionUrl>https://archive.apache.org/dist/tomcat/tomcat-8/v8.0.48/bin/apache-tomcat-8.0.48.tar.gz</tomcatDistributionUrl>-->
 
-        <forge.folderctxmenus.version>7.0.0</forge.folderctxmenus.version>
+        <forge.folderctxmenus.version>7.1.3</forge.folderctxmenus.version>
         <bloomreach.forge.ipfilter.version>5.0.0</bloomreach.forge.ipfilter.version>
         <bloomreach.forge.feed.version>8.0.0</bloomreach.forge.feed.version>
         <bloomreach.text-search-replace.version>4.0.0</bloomreach.text-search-replace.version>
         <forge.resetpassword.version>7.0.0</forge.resetpassword.version>
         <bloomreach.forge.sitemapv2.version>4.0.0</bloomreach.forge.sitemapv2.version>
         <bloomreach.forge.breadcrumb.version>6.0.0</bloomreach.forge.breadcrumb.version>
-        <content-exim.version>6.0.1</content-exim.version>
+        <content-exim.version>6.1.0</content-exim.version>
 
         <commonmark.version>0.18.2</commonmark.version>
         <hystrix-javanica.version>1.5.18</hystrix-javanica.version>
-
-        <!-- Built-in caches use ecache v2.x.
-        Custom caching that needs durable on-disk caching uses v3.x
-        due to insufficient support for on-disk caching in v2.x. -->
-        <ehcache3.version>3.9.9</ehcache3.version>
 
         <aspectweaver.version>1.9.24</aspectweaver.version>
         <awaitility.version>4.2.1</awaitility.version>
@@ -716,12 +711,6 @@
             </dependency>
 
             <dependency>
-                <groupId>org.ehcache</groupId>
-                <artifactId>ehcache</artifactId>
-                <version>${ehcache3.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>org.commonmark</groupId>
                 <artifactId>commonmark</artifactId>
                 <version>${commonmark.version}</version>
@@ -1066,8 +1055,6 @@
                                         -Xmx1024m
                                         -Duser.timezone=Europe/London
                                         -Dfile.encoding=UTF-8
-                                        <!-- for freemarker & taxonomy related errors -->
-                                        --add-opens=java.base/java.util=ALL-UNNAMED
                                         <!-- disabling folder performance improvement -->
                                         -Drepository.folderworkflow.set.hasfolders.property=false
                                     </cargo.jvmargs>
@@ -1201,7 +1188,7 @@
                 <plugins>
                     <plugin>
                         <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven3-archetypes</artifactId>
+                        <artifactId>cargo-maven3-plugin</artifactId>
                         <configuration>
                             <container>
                                 <systemProperties>
